<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestLoan">


    <EditText
        android:id="@+id/txt_loan_amount"
        android:layout_width="250sp"
        android:layout_height="40sp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txt_loan_amount"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <EditText
        android:id="@+id/txt_period"
        android:layout_width="250sp"
        android:layout_height="40sp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txt_period"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <Button
        android:id="@+id/btn_request_loan"
        android:layout_width="150sp"
        android:layout_height="40sp"
        android:background="@drawable/custom_button"
        android:text="@string/btn_request_loan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618" />

</androidx.constraintlayout.widget.ConstraintLayout>